# protobuf_experiments

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  generate_project.bat
docs/: tech_specs.md
proto/: interface.proto
python/: main.py  pyproject.toml  requirements.txt
python/src/: client.py  config.py  main.py  srv.pem  srv_cert.pem  srv_conf.yaml  srv_pub.pem
python/src/data_providers/: __init__.py  data_provider_base.py  db_provider.py
python/src/db/: __init__.py  db.py
python/src/handlers/: __init__.py  handlers.py  ws_handler.py
python/src/models/: __init__.py  log.py  log_data.py  project.py  project_data.py
python/src/notification/: __init__.py  notification_callback_base.py  notification_callback_tg_bot.py  notitication_callback_base.py  notitication_callback_tg_bot.py
python/src/proto/: interface_pb2.py
src/: main.cpp
src/client/: client.cpp  client.hpp
src/project/: ProjectManager.cpp  ProjectManager.hpp  project_manager.cpp  project_manager.hpp
src/protobuf/: message_builder.cpp  message_builder.hpp
src/websocket/: WebSocketClient.cpp  WebSocketClient.hpp  client.cpp  client.hpp
